--- a/package.json
+++ b/package.json
@@ -1,42 +1,51 @@
 {
-  "name": "frontend",
+  "name": "dashboard_template",
   "version": "0.0.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 8185",
+    "dev": "vite --port 8888",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
-    "type-check": "vue-tsc --build"
+    "type-check": "vue-tsc --build",
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "@marcoschulte/vue3-progress": "^0.0.7",
     "@vuepic/vue-datepicker": "^11.0.1",
-    "aos": "^2.3.4",
-    "axios": "^1.7.9",
+    "@vueup/vue-quill": "^1.2.0",
+    "@vueuse/core": "^12.7.0",
+    "animate.css": "^4.1.1",
+    "apexcharts": "^4.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "country-state-city": "^3.2.1",
-    "pinia": "^2.3.1",
-    "sweetalert2": "^11.15.10",
+    "maska": "^3.1.0",
+    "pinia": "^3.0.1",
     "vue": "^3.5.13",
-    "vue-json-excel3": "^1.0.30",
     "vue-router": "^4.5.0",
     "vue-select": "^4.0.0-beta.6",
+    "vue-sweetalert2": "^5.0.11",
+    "vue-tel-input": "^9.3.0",
+    "vue-writer": "^2.0.2",
+    "vue3-apexcharts": "^1.8.0",
     "vue3-easy-data-table": "^1.5.47",
-    "vue3-google-signin": "^2.0.1"
+    "vue3-otp-input": "^0.5.21"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
-    "@types/node": "^22.10.7",
+    "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
+    "@vue/eslint-config-typescript": "^14.4.0",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.20.1",
+    "eslint-plugin-vue": "^9.32.0",
+    "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
     "typescript": "~5.7.3",
-    "vite": "^6.0.11",
-    "vite-plugin-vue-devtools": "^7.7.0",
-    "vue-tsc": "^2.2.0"
+    "vite": "^6.1.0",
+    "vite-plugin-vue-devtools": "^7.7.2",
+    "vue-tsc": "^2.2.2"
   }
 }
