--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "vue-tel-input": "^9.3.0",
     "vue-writer": "^2.0.2",
     "vue3-apexcharts": "^1.8.0",
+    "vue3-carousel": "^0.14.0",
     "vue3-easy-data-table": "^1.5.47",
     "vue3-otp-input": "^0.5.21"
   },
