--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^12.7.0",
     "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "apexcharts": "^4.4.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
