--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "apexcharts": "^4.4.0",
+    "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "js-cookie": "^3.0.5",
     "maska": "^3.1.0",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
