--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@marcoschulte/vue3-progress": "^0.0.7",
+    "@vee-validate/yup": "^4.15.0",
     "@vuepic/vue-datepicker": "^11.0.1",
     "@vueup/vue-quill": "^1.2.0",
     "@vueuse/core": "^12.7.0",
@@ -25,6 +26,7 @@
     "js-cookie": "^3.0.5",
     "maska": "^3.1.0",
     "pinia": "^3.0.1",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
     "vue-select": "^4.0.0-beta.6",
