--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "maska": "^3.1.0",
     "pinia": "^3.0.1",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.13.4",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vitejs/plugin-vue-jsx": "^4.1.1",
