--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vue3-apexcharts": "^1.8.0",
     "vue3-carousel": "^0.14.0",
     "vue3-easy-data-table": "^1.5.47",
+    "vue3-loading-skeleton": "^0.0.13",
     "vue3-otp-input": "^0.5.21"
   },
   "devDependencies": {
