--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@marcoschulte/vue3-progress": "^0.0.7",
+    "@popperjs/core": "^2.11.8",
     "@vee-validate/yup": "^4.15.0",
     "@vuepic/vue-datepicker": "^11.0.1",
     "@vueup/vue-quill": "^1.2.0",
@@ -23,6 +24,7 @@
     "axios": "^1.9.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "country-state-city": "^3.2.1",
     "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
     "maska": "^3.1.0",
